refactor(services): resolve pmd violations and improve code quality
- apply 'final' modifier to method parameters for immutability
- replace String.toLowerCase() with Locale.ROOT variants for deterministic behavior
- simplify method signatures by removing redundant unchecked exception declarations
- reduce cyclomatic complexity and adhere to Law of Demeter via local variables
- modernize string validation using isBlank() across auth-service and api-gateway